Clean yum cache on base image

--- a/runtime/base/Dockerfile
+++ b/runtime/base/Dockerfile
@@ -551,3 +551,6 @@ RUN cp /usr/lib64/liblz4.so.1 /opt/ymir/lib/liblz4.so.1
 RUN cp /usr/lib64/libpng15.so.15 /opt/ymir/lib/libpng15.so.15
 RUN cp /usr/lib64/libjpeg.so.62 /opt/ymir/lib/libjpeg.so.62
 RUN cp /usr/lib64/libgomp.so.1 /opt/ymir/lib/libgomp.so.1
+
+# Clean yum cache (free up over 1GB of space)
+RUN RUN LD_LIBRARY_PATH= yum clean all
